1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* defobj.m (initDefobj): Call Archiver create: instead of ensure:.

	* Makefile.am (INCLUDES): Add $(HDF5INCLUDES).

	* DefObject.[hm], defobj.h: Include swarmconfig.h.
	Declare/define hdf5InCreate:, hdf5In: and hdf5Out: if HAVE_HDF5 is
	defined.

	* Archiver.m (lispDefaultPath, lispProcessPairs,
	lispProcessMakeObjcPairs, lispProcessApplicationPairs,
	lispLoadArchiverExpr): Prefix with lisp.
	([Archiver -createEnd]): Setup and call lispLoadArchiverExpr here.

	* Archiver.[hm]: Rename path to lispPath throughout.
	Remove load:, load:fromPath, +ensure:path: and ensure: as
	+createBegin:/createEnd work fine.

1998-12-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Arguments.h (Arguments_c): Inherit from CreateDrop instead of
	CreateDrop_s.

	* Arguments.m ([Arguments_c +createBegin:]): Initialize optionFunc
	to NULL.
	([Arguments_c -parseKey:arg:]): Call parseFunc if set.
	(+createArgc:Argv:version:bugAddress:options:parseFunc): Call
	addOptions if options is set.  Rename (local) arguments to argObj.

	* Arguments.[hm], defobj.h: Add options:optionFunc: to
	+createArgc:Argv:version:bugAddress:options:optionFunc.
	Return self from addOptions:.
	(argp): Make instance variable.
	New method setOptionFunc:.

	* defobj.m: Include misc.h instead of stdio.h.  Use YES instead
	of 1 for initialization of _warning_dropFrom and _obj_debug.
	(initDefobj): Default to Arguments_c if argumentsClass
	is Nil.


	* Makefile.am (module_headers): Add defobj.xm.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* make-h2x: Use OBJC and OBJCFLAGS instead of CC and CFLAGS.

	* Program.[hm] (_obj_nclasses, _obj_nmodules): Make unsigned.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (CLEANFILES): Append version.h.

	* DefObject.m (lispIn): Get typeNameString directly from list.

	* DefObject.[hm], defobj.h: Remove lispInQuotedExpr.
